testing transition jump fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -286,16 +286,31 @@ transform:translate3d(0,0,0);
   float: left;
   width: 100%;
   height: auto;
+  -webkit-transform:translate3d(0,0,0);
+  transform:translate3d(0,0,0);
+  transition: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
 }
 
 .grid-item--portrait {
   width: 100%;
     height: auto;
+    -webkit-transform:translate3d(0,0,0);
+    transform:translate3d(0,0,0);
+    transition: transform;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 300ms;
 }
 
 .grid-item--largeLandscape {
   width: 100%;
     height: auto;
+    -webkit-transform:translate3d(0,0,0);
+    transform:translate3d(0,0,0);
+    transition: transform;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 300ms;
 }
 
 @media (min-width: 768px) {
@@ -303,15 +318,30 @@ transform:translate3d(0,0,0);
   float: left;
   width: 258px;
   height: 172px;
+  -webkit-transform:translate3d(0,0,0);
+  transform:translate3d(0,0,0);
+  transition: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
 }
 
 .grid-item--portrait {
   width: 258px;
   height: 354px;
+  -webkit-transform:translate3d(0,0,0);
+  transform:translate3d(0,0,0);
+  transition: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
 }
 .grid-item--largeLandscape {
   width: 526px;
   height: 354px;
+  -webkit-transform:translate3d(0,0,0);
+  transform:translate3d(0,0,0);
+  transition: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
 }
 }
 
